force-app/main/default/objects/Candidate__c/fields/Accepted_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read the above wording and consent to my data being collected and used as described.</description>
    <inlineHelpText>I have read the above wording and consent to my data being collected and used as described.</inlineHelpText>
    <label>Accepted Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>