force-app/main/default/objects/Candidate__c/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>