force-app/main/default/objects/Candidate__c/fields/Conflict_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Of_Interest__c</fullName>
    <label>Conflict Of Interest</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>