force-app/main/default/objects/Candidate__c/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <label>Current Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>