force-app/main/default/objects/Candidate__c/fields/Current_County_State__c.field-meta.xml
<CustomField>
    <fullName>Current_County_State__c</fullName>
    <label>Current County / State</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>