force-app/main/default/objects/Candidate__c/fields/Current_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer_Name__c</fullName>
    <label>Current Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>