force-app/main/default/objects/Candidate__c/fields/Current_Job_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_StartDate__c</fullName>
    <label>Current Job StartDate</label>
    <type>Date</type>
</CustomField>