force-app/main/default/objects/Candidate__c/fields/Current_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Title__c</fullName>
    <label>Current Job Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>