force-app/main/default/objects/Candidate__c/fields/Current_Postcode_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Current_Postcode_ZIP__c</fullName>
    <label>Current Postcode / ZIP</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>