force-app/main/default/objects/Candidate__c/fields/Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary__c</fullName>
    <label>Current Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>