force-app/main/default/objects/Candidate__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Techical-Experienced</fullName>
            </value>
            <value>
                <fullName>Techical-Fresher</fullName>
            </value>
            <value>
                <fullName>Non- Technical Fresher</fullName>
            </value>
            <value>
                <fullName>Non-Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>