force-app/main/default/objects/Candidate__c/fields/Employment_History__c.field-meta.xml
<CustomField>
    <fullName>Employment_History__c</fullName>
    <description>Are you currently or have you ever been employed by this organization or its affiliates?</description>
    <inlineHelpText>Are you currently or have you ever been employed by this organization or its affiliates?</inlineHelpText>
    <label>Employment History</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>