force-app/main/default/objects/Candidate__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <inlineHelpText>Expected Salary per Annum</inlineHelpText>
    <label>Expected Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>