force-app/main/default/objects/Candidate__c/fields/Highest_Education_Degree__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Degree__c</fullName>
    <label>Highest Education Degree</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>