force-app/main/default/objects/Candidate__c/fields/Job_Profile__c.field-meta.xml
<CustomField>
    <fullName>Job_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Profile</label>
    <referenceTo>Job_Profile__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>