force-app/main/default/objects/Candidate__c/fields/Legal_Right_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Legal_Right_to_Work__c</fullName>
    <description>Do you have the Legal Right to Work in the country you are applying to?</description>
    <label>Legal Right to Work</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>