force-app/main/default/objects/Candidate__c/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <label>LinkedIn Profile</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>