force-app/main/default/objects/Candidate__c/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <label>Permanent City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>