force-app/main/default/objects/Candidate__c/fields/Permanent_County_State__c.field-meta.xml
<CustomField>
    <fullName>Permanent_County_State__c</fullName>
    <label>Permanent County / State</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>