force-app/main/default/objects/Candidate__c/fields/Permanent_Postcode_ZIP_EIR__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Postcode_ZIP_EIR__c</fullName>
    <label>Permanent Postcode / ZIP / EIR</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>