force-app/main/default/objects/Candidate__c/fields/Place_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Residence__c</fullName>
    <description>Place of Residence</description>
    <inlineHelpText>Place of Residence</inlineHelpText>
    <label>Place of Residence</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>