force-app/main/default/objects/Candidate__c/fields/Plain_Text_Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text_Cover_Letter__c</fullName>
    <description>maximum 700 characters</description>
    <label>Plain Text Cover Letter</label>
    <length>700</length>
    <type>Html</type>
</CustomField>