force-app/main/default/objects/Candidate__c/fields/Regulatory_Discipline_History__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Discipline_History__c</fullName>
    <description>Have you ever been disciplined/cautioned by a regulatory body?</description>
    <label>Regulatory Discipline History</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>