force-app/main/default/objects/Candidate__c/fields/Relatives_Working__c.field-meta.xml
<CustomField>
    <fullName>Relatives_Working__c</fullName>
    <description>Do you know of any relatives who are working for the area of this Organization you are applying for?</description>
    <label>Relatives Working</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>