force-app/main/default/objects/Candidate__c/fields/Salary_Hike_Expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_Hike_Expected__c</fullName>
    <formula>IF( (Total_Experience__c !=0  &amp;&amp;  Current_Salary__c !=0), (( Expected_Salary__c  -  Current_Salary__c ) /  Current_Salary__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the candidate is a fresher,i.e has 0 months of total experience.Hike is set to 0.</inlineHelpText>
    <label>Salary Hike Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>