force-app/main/default/objects/Candidate__c/fields/Screening_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Screening_Acceptance__c</fullName>
    <description>If your application is successful , the organization undertakes people screening as part of its recruitment process, these include; criminal records, address verification, academic qualifications, employment dates and employer references — are you happy to continue with your application?</description>
    <label>Screening_Acceptance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>