force-app/main/default/objects/Candidate__c/fields/Self_Identified_Disability__c.field-meta.xml
<CustomField>
    <fullName>Self_Identified_Disability__c</fullName>
    <description>Do you consider yourself to have a disability?</description>
    <inlineHelpText>Do you consider yourself to have a disability?</inlineHelpText>
    <label>Self-Identified Disability</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>