force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Submitted</fullName>
                <default>true</default>
                <label>Application Submitted</label>
            </value>
            <value>
                <fullName>Resume Under Review</fullName>
            </value>
            <value>
                <fullName>Phone Screen Scheduled</fullName>
            </value>
            <value>
                <fullName>Phone Screen Completed</fullName>
            </value>
            <value>
                <fullName>In-Person Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>In-Person Interview Completed</fullName>
            </value>
            <value>
                <fullName>Skills Assessment</fullName>
            </value>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>Offer Extended</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn by Candidate</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>