force-app/main/default/objects/Candidate__c/fields/Total_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience__c</fullName>
    <description>Total Experience in months, if the candidate is fresher it should be 0.</description>
    <inlineHelpText>Total Experience in months, if the candidate is fresher it should be 0.</inlineHelpText>
    <label>Total Experience</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>