force-app/main/default/objects/Candidate__c/fields/Visa_Required__c.field-meta.xml
<CustomField>
    <fullName>Visa_Required__c</fullName>
    <label>Visa_Required</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No-I am a citizen</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>