force-app/main/default/objects/Candidate__c/recordTypes/Technical_Experienced.recordType-meta.xml
<RecordType>
    <fullName>Technical_Experienced</fullName>
    <active>true</active>
    <label>Technical Experienced</label>
</RecordType>