force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Current_Salary__c</columns>
    <columns>Expected_Salary__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Current_City__c</columns>
    <columns>Current_Employer_Name__c</columns>
    <columns>Current_Job_Title__c</columns>
    <columns>Salary_Hike_Expected__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Domain__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>